@@ -153,8 +153,10 @@ if '@IS_ELCAPITAN_TRUE@' != '#':
 for module in core_modules:
 
     # In case that wrappers were not built then copy the module wrapper files
-    # from the source to the build directory
-    if '@BUILD_WRAPPERS_FALSE@' != '#' and is_build:
+    # from the source to the build directory. Only do this if the build
+    # directory differs from the source directory
+    if '@BUILD_WRAPPERS_FALSE@' != '#' and is_build and \
+       '@srcdir@' != '@builddir@':
         py_file  = pkg_name+'/'+module+'.py'
         cpp_file = pkg_name+'/'+module+'_wrap.cpp'
         os.system('cp %s %s' % ('@srcdir@/'+cpp_file, '@builddir@/'+cpp_file))
@@ -183,8 +185,10 @@ for module in inst_modules:
     install_files.extend(glob.glob('@top_srcdir@/inst/'+module+'/pyext/*.i'))
 
     # In case that wrappers were not built then copy the module wrapper files
-    # from the source to the build directory
-    if '@BUILD_WRAPPERS_FALSE@' != '#' and is_build:
+    # from the source to the build directory. Only do this if the build
+    # directory differs from the source directory
+    if '@BUILD_WRAPPERS_FALSE@' != '#' and is_build and \
+       '@srcdir@' != '@builddir@':
         py_file  = pkg_name+'/'+module+'.py'
         cpp_file = pkg_name+'/'+module+'_wrap.cpp'
         os.system('cp %s %s' % ('@srcdir@/'+cpp_file, '@builddir@/'+cpp_file))
